--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -111,12 +111,13 @@ body {
 
 .reset-btn {
   background-color: #ff6372;
-    border: 0;
-    font-size: 22px;
-    color: #fff;
-    padding: 10px 25px;
-    margin: 10px auto;
-    display: block;
+  border: 0;
+  font-size: 22px;
+  color: #fff;
+  padding: 10px 25px;
+  margin: 10px auto;
+  display: block;
+  cursor: pointer;
 }
 
 .result{ 
